Added roleId to response in auth/validate
